ola-parser/src/testdata/syntaxTests/natspec/invalid/docstring_inheritdoc.sol
contract C {
    /// @inheritdoc X
    fn f() internal {
    }
}
// ----
// DocstringParsingError 9397: (17-34): Documentation tag @inheritdoc references inexistent contract "X".
